<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imgWisata"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/wisataimage"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="8dp" />

    <TextView
        android:id="@+id/tvLokasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:paddingTop="4dp" />

    <TextView
        android:id="@+id/tvDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:paddingTop="8dp" />

    <!-- Tombol Like dan Bookmark -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/btnLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/btnlike"
            android:padding="16dp"
            android:src="@drawable/ic_like"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btnBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bookmark"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:contentDescription="@string/bookmark" />
    </LinearLayout>

</LinearLayout>
